--- a/dev.yml
+++ b/dev.yml
@@ -10,7 +10,7 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - JWT_SECRET=${JWT_SECRET}
     volumes:
-      - .:/backend/app
+      - ./backend/app:/app
     depends_on:
       - db
 
